Fix grid alignment

--- a/packages/swa/src/styles.css
+++ b/packages/swa/src/styles.css
@@ -38,6 +38,7 @@ img.htmx-indicator {
 
 .sightings {
   display: grid;
+  align-items: center;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 0.5rem;
   margin: 0;
